// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button large 1`] = `
<button
  className="button buttonLarge"
  type="button"
/>
`;

exports[`Button primary 1`] = `
<button
  className="button buttonPrimary"
  type="button"
/>
`;

exports[`Button with type "button" 1`] = `
<button
  className="button"
  type="button"
/>
`;

exports[`Button with type "reset" 1`] = `
<button
  className="button"
  type="reset"
/>
`;

exports[`Button with type "submit" 1`] = `
<button
  className="button"
  type="submit"
/>
`;
